Fixed custom scrollbar

--- a/src/styles/blocks/features.scss
+++ b/src/styles/blocks/features.scss
@@ -50,24 +50,29 @@
       left: 50%;
       transform: translateX(-50%);
       content: "";
-      width: 320px;
+      width: 326px;
       height: 173px;
-      background-image: url("../images/features/features.png");
+      background-image: url("../images/features/feature.png");
       background-size: contain;
       background-position: center;
       background-repeat: no-repeat;
 
       @include on-tablet {
-        width: 435px;
-        height: 226px;
+        width: 400px;
+        height: 200px;
         left: 100%;
         transform: translateX(-100%);
       }
 
+      @media (min-width: 800px) {
+        width: 435px;
+        height: 226px;
+      }
+
       @include on-desctop {
         width: 543px;
-        height: 301px;
-        transform: translate(-120%);
+        height: 286px;
+        transform: translate(-130%);
       }
     }
   }
@@ -96,7 +101,7 @@
   &__wrapper {
     @include on-desctop {
       @include grid;
-      
+
       row-gap: 50px;
     }
   }
