--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -2,7 +2,7 @@
   padding-bottom: 55px;
 
   @include on-tablet {
-    padding-bottom: 0;
+    padding-bottom: 70px;
   }
 
   @include on-desctop {
@@ -10,14 +10,9 @@
   }
 
   &__content {
-    box-sizing: border-box;
-
-    @include on-tablet {
-      padding-bottom: 75px;
-      height: 100vh;
-    }
-
     @include on-desctop {
+      box-sizing: border-box;
+      height: 100vh;
       padding-bottom: 45px;
       display: flex;
       flex-direction: column;
