--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -6,7 +6,7 @@
   &__content {
     @include container;
 
-    height: 100vh;
+    min-height: 100vh;
     box-sizing: border-box;
     padding-bottom: 30px;
     display: flex;
@@ -32,6 +32,7 @@
   &__options {
     flex: 1 1 auto;
     align-items: flex-start;
+    padding-bottom: 20px;
 
     @include on-tablet {
       display: none;
