--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -11,15 +11,30 @@
 
   &__body {
     margin: 0;
+  }
 
+  &__header {
     &--with-menu {
-      overflow: hidden;
+      display: none;
+    }
+  }
+
+  &__main {
+    &--with-menu {
+      display: none;
+    }
+  }
+
+  &__footer {
+    &--with-menu {
+      display: none;
     }
   }
 
   &__menu {
     background-color: #f7f7f7;
-    position: fixed;
+    position: absolute;
+    overflow: scroll;
     top: 0;
     left: 0;
     right: 0;
