--- a/src/styles/blocks/questions.scss
+++ b/src/styles/blocks/questions.scss
@@ -101,6 +101,24 @@
       resize: none;
       height: 128px;
       font-family: inherit;
+
+      &::-webkit-scrollbar {
+        width: 20px;
+      }
+
+      &::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 5px $color-main;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        background-color: $color-green;
+        border-radius: 10px;
+      }
+
+      &::-webkit-scrollbar-thumb:hover {
+        background-color: #d6ecec;
+        border: 2px solid $color-green;
+      }
     }
   }
 
